Fix site width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,14 @@ CONTENTS:
 div, article, section, header, footer, nav, li {
     position: relative;
 }
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
 .group:after {
     display: block;
